WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277552
[WebGPU] Sampler::samplerState() will throw an exception if the device is nil
https://bugs.webkit.org/show_bug.cgi?id=277552
Summary
[WebGPU] Sampler::samplerState() will throw an exception if the device is nil
Mike Wyrzykowski
Reported
2024-08-02 08:58:16 PDT
[WebGPU] Sampler::samplerState() will throw an exception if the device is nil
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-08-02 08:58:28 PDT
radar://130092543
Mike Wyrzykowski
Comment 2
2024-08-02 09:07:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31646
EWS
Comment 3
2024-08-05 15:34:41 PDT
Committed
281855@main
(ea6fdc4592a3): <
https://commits.webkit.org/281855@main
> Reviewed commits have been landed. Closing PR #31646 and removing active labels.
Mike Wyrzykowski
Comment 4
2024-08-07 16:53:22 PDT
Reopened Bugzilla. Some samples regressed which used sampler states, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=277783
.
Mike Wyrzykowski
Comment 5
2024-08-07 17:02:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31873
EWS
Comment 6
2024-08-07 17:46:07 PDT
Committed
281971@main
(4ea3b600a31f): <
https://commits.webkit.org/281971@main
> Reviewed commits have been landed. Closing PR #31873 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug