[WebGPU] Sampler::samplerState() will throw an exception if the device is nil https://bugs.webkit.org/show_bug.cgi?id=277552 rdar://130092543

Reviewed by Tadeu Zagallo.

(Reland with regression fixed)
A valid sampler with a destroyed device could end up raising
NSExceptions because we would attempt to remove objects from
an empty cache.

* LayoutTests/fast/webgpu/nocrash/fuzz-277552-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-277552.html: Added.
* Source/WebGPU/WebGPU/Sampler.mm:
(WebGPU::Sampler::samplerState const):

Canonical link: https://commits.webkit.org/281971@main